syntax = "proto3";

package rpc;

option go_package = "/rpc";

service UserService {
  rpc Ping(PingRequest) returns (Reply) {}
  rpc Login(LoginRequest) returns (Reply) {}
  rpc Register(RegisterRequest) returns (Reply) {}
  rpc GetProfile(GetProfileRequest) returns (GetProfileReply) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (Reply) {}
  rpc UploadAvatar(UploadRequest) returns (UploadReply) {}
}

message PingRequest {
  string msg = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string avatar = 4;
}

message UpdateProfileRequest {
  string username = 1;
  string nickname = 2;
  string avatar = 3;
}

message GetProfileRequest {
  string username = 1;
}

message UploadRequest {
  string file_name = 1;
  string username = 2;
  bytes content = 3;
}

message Reply {
  int32 code = 1;
  string message = 2;
}

message GetProfileReply {
  Reply reply = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
}

message UploadReply {
  Reply reply = 1;
  string avatar = 2;
}